--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -1,7 +1,7 @@
 name: daily-cron
 on:
   schedule:
-    - cron: '* 10,20,30,40,50 * * *'
+    - cron: '* * * * *'
 jobs:
   cron:
     runs-on: ubuntu-latest
