--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -1,12 +1,11 @@
 name: daily-cron
 on:
   schedule:
-    - cron: '* * * * *'
+    - cron: '* 5 * * *'
 jobs:
   cron:
     runs-on: ubuntu-latest
     steps:
       - name: Call our API route
         run: |
-          curl --request GET \
-          --url 'https://awesomely.vercel.app/api/hello'
+          curl --url 'https://github.com'
