--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -1,11 +1,13 @@
 name: daily-cron
 on:
   schedule:
-    - cron: '54 * * * *'
+    - cron: '0 1 * * *'
 jobs:
   cron:
     runs-on: ubuntu-latest
     steps:
       - name: Call our API route
         run: |
-          curl --url 'https://github.com'
+          curl --request POST \
+          --url 'https://yoursite.com/api/cron' \
+          --header 'Authorization: Bearer ${{ secrets.API_SECRET_KEY }}'
