--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -1,11 +1,11 @@
-name: daily-cron
-on:
-  schedule:
-    - cron: '0,5,10,15,20,25,30,35,40,45,50,55  * * * *'
-jobs:
-  cron:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Call our API route
-        run: |
-          curl --url 'https://awesomely.vercel.app/api/hello'
+# name: daily-cron
+# on:
+#   schedule:
+#     - cron: '0,5,10,15,20,25,30,35,40,45,50,55  * * * *'
+# jobs:
+#   cron:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Call our API route
+#         run: |
+#           curl --url 'https://awesomely.vercel.app/api/hello'
